--- a/config/credentials.env.example
+++ b/config/credentials.env.example
@@ -3,23 +3,26 @@ REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 REDDIT_USERNAME=
 REDDIT_PASSWORD=
-REDDIT_USER_AGENT=MicrodoseStudyBot/0.1 by YOUR_USERNAME
+REDDIT_USER_AGENT=bot:microdosing_research:v1.0 (by /u/YOUR_USERNAME)
 
-# Bot Configuration
+# Optional login for Selenium (Google OAuth)
+GOOGLE_EMAIL=
+GOOGLE_PASSWORD=
+
+# Bot configuration
 BOT_MODE=selenium  # or "api"
 ENABLE_POSTING=0
-
-# Placeholder for later LLM integration
-OPENAI_API_KEY=
-
-# Optional: set to 1 to force mock mode (no real API calls).
 MOCK_MODE=0
-
-# Optional: set to 1 to try LLM generation for replies (falls back to stub if unavailable).
 USE_LLM=0
-
-# Optional: custom run identifier for logging (defaults to timestamp if unset).
 RUN_ID=
+LOG_LEVEL=INFO
 
-# Selenium Settings
-SELENIUM_HEADLESS=False
+# Selenium settings
+SELENIUM_HEADLESS=0
+COOKIE_PATH=cookies.pkl
+
+# LLM (OpenRouter via OpenAI client)
+OPENROUTER_API_KEY=
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENAI_HTTP_REFERER=http://localhost
+OPENAI_X_TITLE=Reddit_Bot
