--- a/.github/workflows/selenium_readonly_scan.yml
+++ b/.github/workflows/selenium_readonly_scan.yml
@@ -30,14 +30,27 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install system dependencies
+      - name: Install Chrome and ChromeDriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium chromium-driver
-          if command -v chromium >/dev/null 2>&1; then chromium --version; fi
-          if command -v chromium-browser >/dev/null 2>&1; then chromium-browser --version; fi
-          if command -v google-chrome >/dev/null 2>&1; then google-chrome --version; fi
-          if command -v chromedriver >/dev/null 2>&1; then chromedriver --version; fi
+          sudo apt-get install -y wget unzip
+
+          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -fy install
+
+          CHROME_VERSION="$(google-chrome --version | awk '{print $3}')"
+          echo "Chrome version: $CHROME_VERSION"
+
+          wget -q "https://storage.googleapis.com/chrome-for-testing-public/${CHROME_VERSION}/linux64/chromedriver-linux64.zip"
+          unzip -q chromedriver-linux64.zip
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
+
+          google-chrome --version
+          /usr/local/bin/chromedriver --version
+
+          echo "CHROME_BIN=$(command -v google-chrome)" >> $GITHUB_ENV
+          echo "CHROMEDRIVER_PATH=/usr/local/bin/chromedriver" >> $GITHUB_ENV
 
       - name: Install Python dependencies
         run: |
@@ -56,57 +69,16 @@ jobs:
           mkdir -p data
           echo "$REDDIT_COOKIES_BASE64" | base64 -d > data/gha_cookies.pkl
 
-      - name: Detect Chrome paths
+      - name: Create minimal env file
         run: |
-          CHROME_BIN=""
-          for candidate in \
-            "$(command -v chromium 2>/dev/null || true)" \
-            "$(command -v chromium-browser 2>/dev/null || true)" \
-            "$(command -v google-chrome 2>/dev/null || true)" \
-            "/usr/bin/chromium" \
-            "/usr/bin/chromium-browser" \
-            "/usr/bin/google-chrome"; do
-            if [ -n "$candidate" ] && [ -x "$candidate" ]; then
-              CHROME_BIN="$candidate"
-              break
-            fi
-          done
-          if [ -z "$CHROME_BIN" ]; then
-            CHROME_BIN="$(dpkg -L chromium 2>/dev/null | grep -E '/chromium$' | head -1)"
-            if [ -n "$CHROME_BIN" ] && [ ! -x "$CHROME_BIN" ]; then
-              CHROME_BIN=""
-            fi
+          mkdir -p config
+          if [ ! -f config/credentials.env ]; then
+            {
+              echo "BOT_MODE=selenium"
+              echo "ENABLE_POSTING=0"
+              echo "USE_LLM=0"
+            } > config/credentials.env
           fi
-          if [ -z "$CHROME_BIN" ]; then
-            echo "Chrome binary not found" >&2
-            exit 1
-          fi
-          echo "CHROME_BIN=$CHROME_BIN" >> $GITHUB_ENV
-          echo "Using CHROME_BIN=$CHROME_BIN"
-
-          CHROMEDRIVER_PATH=""
-          for candidate in \
-            "$(command -v chromedriver 2>/dev/null || true)" \
-            "/usr/lib/chromium/chromedriver" \
-            "/usr/lib/chromium-browser/chromedriver" \
-            "/usr/bin/chromedriver"; do
-            if [ -n "$candidate" ] && [ -x "$candidate" ]; then
-              CHROMEDRIVER_PATH="$candidate"
-              break
-            fi
-          done
-          if [ -z "$CHROMEDRIVER_PATH" ]; then
-            CHROMEDRIVER_PATH="$(dpkg -L chromium-driver 2>/dev/null | grep -E '/chromedriver$' | head -1)"
-            if [ -n "$CHROMEDRIVER_PATH" ] && [ ! -x "$CHROMEDRIVER_PATH" ]; then
-              CHROMEDRIVER_PATH=""
-            fi
-          fi
-          if [ -z "$CHROMEDRIVER_PATH" ]; then
-            echo "Chromedriver not found" >&2
-            exit 1
-          fi
-          echo "CHROMEDRIVER_PATH=$CHROMEDRIVER_PATH" >> $GITHUB_ENV
-          echo "Using CHROMEDRIVER_PATH=$CHROMEDRIVER_PATH"
 
       - name: Run night scanner (read-only)
         env:
