--- a/config/credentials.env.example
+++ b/config/credentials.env.example
@@ -9,6 +9,34 @@ REDDIT_USER_AGENT=bot:microdosing_research:v1.0 (by /u/YOUR_USERNAME)
 GOOGLE_EMAIL=
 GOOGLE_PASSWORD=
 
+# Optional multi-account Selenium creds (used to mint cookies)
+REDDIT_EMAIL_1=
+REDDIT_PASSWORD_1=
+REDDIT_EMAIL_2=
+REDDIT_PASSWORD_2=
+REDDIT_EMAIL_3=
+REDDIT_PASSWORD_3=
+REDDIT_EMAIL_4=
+REDDIT_PASSWORD_4=
+REDDIT_EMAIL_5=
+REDDIT_PASSWORD_5=
+REDDIT_EMAIL_6=
+REDDIT_PASSWORD_6=
+
+# Optional per-account Google OAuth creds (use google_email_env_var/google_password_env_var in accounts.json)
+GOOGLE_EMAIL_1=
+GOOGLE_PASSWORD_1=
+GOOGLE_EMAIL_2=
+GOOGLE_PASSWORD_2=
+GOOGLE_EMAIL_3=
+GOOGLE_PASSWORD_3=
+GOOGLE_EMAIL_4=
+GOOGLE_PASSWORD_4=
+GOOGLE_EMAIL_5=
+GOOGLE_PASSWORD_5=
+GOOGLE_EMAIL_6=
+GOOGLE_PASSWORD_6=
+
 # Bot configuration
 BOT_MODE=selenium  # or "api"
 ENABLE_POSTING=0
