--- a/.github/workflows/selenium_readonly_scan.yml
+++ b/.github/workflows/selenium_readonly_scan.yml
@@ -197,6 +197,16 @@ jobs:
         run: |
           python scripts/upload_logs_supabase.py
 
+      - name: Upsert logs into Supabase DB
+        if: steps.gate.outputs.should_run == 'true'
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_QUEUE_PATH: logs/night_queue.json
+          SUPABASE_SUMMARY_PATH: logs/night_scan_summary.csv
+        run: |
+          python scripts/upload_logs_supabase_db.py
+
       - name: Upload scan results
         if: steps.gate.outputs.should_run == 'true'
         uses: actions/upload-artifact@v4
