--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,10 @@ services:
         value: Reddit_Bot
       - key: STREAMLIT_APP_PASSWORD
         sync: false
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_ANON_KEY
+        sync: false
       - key: REDDIT_CLIENT_ID
         sync: false
       - key: REDDIT_CLIENT_SECRET
