--- a/.github/workflows/humanized_scan.yml
+++ b/.github/workflows/humanized_scan.yml
@@ -110,7 +110,7 @@ jobs:
           SUPABASE_COOKIES_PATH: ${{ secrets.SUPABASE_COOKIES_PATH }}
         run: |
           mkdir -p data
-          python scripts/supabase_cookies_sync.py download
+          python scripts/ci/supabase_cookies_sync.py download
 
       - name: Create minimal env file
         if: steps.gate.outputs.should_run == 'true'
@@ -153,6 +153,7 @@ jobs:
           BOT_MODE: selenium
           ENABLE_POSTING: "0"
           USE_LLM: "0"
+          PYTHONPATH: ${{ github.workspace }}/src:${{ github.workspace }}
           SELENIUM_HEADLESS: "1"
           SELENIUM_USE_UNDETECTED: "1"
           SELENIUM_STEALTH: "1"
@@ -172,7 +173,7 @@ jobs:
           elif [ "${{ github.event.inputs.force_run }}" = "true" ]; then
             WINDOWS_ARG="--force-run"
           fi
-          python scripts/humanized_night_scanner.py $WINDOWS_ARG
+          python scripts/runners/humanized_night_scanner.py $WINDOWS_ARG
       
       - name: Upload refreshed cookies to Supabase
         if: steps.gate.outputs.should_run == 'true'
@@ -182,7 +183,7 @@ jobs:
           SUPABASE_BUCKET: ${{ secrets.SUPABASE_BUCKET }}
           SUPABASE_COOKIES_PATH: ${{ secrets.SUPABASE_COOKIES_PATH }}
         run: |
-          python scripts/supabase_cookies_sync.py upload
+          python scripts/ci/supabase_cookies_sync.py upload
 
       - name: Upload logs to Supabase
         if: steps.gate.outputs.should_run == 'true'
@@ -192,7 +193,7 @@ jobs:
           SUPABASE_BUCKET: ${{ secrets.SUPABASE_BUCKET }}
           SUPABASE_PREFIX: scan-results/humanized
         run: |
-          python scripts/upload_logs_supabase.py
+          python scripts/ci/upload_logs_supabase.py
 
       - name: Upsert logs into Supabase DB
         if: steps.gate.outputs.should_run == 'true'
@@ -202,7 +203,7 @@ jobs:
           SUPABASE_QUEUE_PATH: logs/night_queue.json
           SUPABASE_SUMMARY_PATH: logs/night_scan_summary.csv
         run: |
-          python scripts/upload_logs_supabase_db.py
+          python scripts/ci/upload_logs_supabase_db.py
 
       - name: Upload scan results
         if: steps.gate.outputs.should_run == 'true'
