--- a/.github/workflows/selenium_readonly_scan.yml
+++ b/.github/workflows/selenium_readonly_scan.yml
@@ -151,6 +151,7 @@ jobs:
           BOT_MODE: selenium
           ENABLE_POSTING: "0"
           USE_LLM: "0"
+          PYTHONPATH: ${{ github.workspace }}/src:${{ github.workspace }}
           SELENIUM_HEADLESS: "1"
           SELENIUM_USE_UNDETECTED: "1"
           SELENIUM_STEALTH: "1"
@@ -172,7 +173,7 @@ jobs:
             WINDOWS_ARG="--windows ${{ matrix.windows }}"
           fi
 
-          python scripts/night_scanner.py \
+          python scripts/runners/night_scanner.py \
             --mode selenium \
             --limit 25 \
             --jitter-min 10 \
@@ -189,7 +190,7 @@ jobs:
           SUPABASE_BUCKET: ${{ secrets.SUPABASE_BUCKET }}
           SUPABASE_PREFIX: scan-results/${{ matrix.account }}
         run: |
-          python scripts/upload_logs_supabase.py
+          python scripts/ci/upload_logs_supabase.py
 
       - name: Upsert logs into Supabase DB
         if: steps.gate.outputs.should_run == 'true'
@@ -199,7 +200,7 @@ jobs:
           SUPABASE_QUEUE_PATH: logs/night_queue.json
           SUPABASE_SUMMARY_PATH: logs/night_scan_summary.csv
         run: |
-          python scripts/upload_logs_supabase_db.py
+          python scripts/ci/upload_logs_supabase_db.py
 
       - name: Upload scan results
         if: steps.gate.outputs.should_run == 'true'
