--- a/config/credentials.env.example
+++ b/config/credentials.env.example
@@ -51,7 +51,7 @@ COOKIE_PATH=data/cookies_account1.pkl
 
 # Supabase (logs + cookie sync)
 SUPABASE_URL=
-SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_BUCKET=scan-results
 SUPABASE_COOKIES_ACCOUNT1_PATH=cookies_account1.pkl
