--- a/render.yaml
+++ b/render.yaml
@@ -19,7 +19,7 @@ services:
         sync: false
       - key: SUPABASE_URL
         sync: false
-      - key: SUPABASE_ANON_KEY
+      - key: SUPABASE_SERVICE_ROLE_KEY
         sync: false
       - key: REDDIT_CLIENT_ID
         sync: false
