--- a/.github/workflows/selenium_readonly_scan.yml
+++ b/.github/workflows/selenium_readonly_scan.yml
@@ -185,6 +185,7 @@ jobs:
       - name: Upload logs to Supabase
         if: steps.gate.outputs.should_run == 'true'
         env:
+          PYTHONPATH: ${{ github.workspace }}/src:${{ github.workspace }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
           SUPABASE_BUCKET: ${{ secrets.SUPABASE_BUCKET }}
@@ -195,6 +196,7 @@ jobs:
       - name: Upsert logs into Supabase DB
         if: steps.gate.outputs.should_run == 'true'
         env:
+          PYTHONPATH: ${{ github.workspace }}/src:${{ github.workspace }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
           SUPABASE_QUEUE_PATH: logs/night_queue.json
